# senior-quantitative-researcher-assignment

./: .gitignore  ASSUMPTIONS.md  DECISIONS.md  Makefile  README.md  SUBMISSION.md  TASK_PLAN.md  pyproject.toml  requirements.txt
docs/: final_submission_summary.md  interview_demo.md  results_delivery.md  submission_ru.md  task_1_pcap_parsing.md  task_2_wdo_calendar_spread.md  task_3_volatility_momentum.md  task_4_gold_arbitrage.md  technical_documentation.md
scripts/: 00_discover_data.py  01_parse_pcap.py  02_build_wdo_calendar_spread.py  03_compute_vol_momentum.py  04_gold_arbitrage_research.py  create_submission_doc_ru.py  run_all.py
src/quant_assignment/: arbitrage.py  b3_decoder.py  config.py  features.py  io_utils.py  order_book.py  pcap_parser.py  plotting.py  spreads.py  validation.py
tests/: test_arbitrage.py  test_b3_decoder.py  test_features.py  test_order_book.py  test_spreads.py  test_validation.py
